# shuup-api

./: .travis.yml  MANIFEST.in  README.md  requirements-test.txt  setup.cfg
docs/: rest_usage.md  web_api.md
shuup_api/: __init__.py  apps.py  decorators.py  docs.py  encoders.py  factories.py  fields.py  filters.py  mixins.py  permissions.py  urls.py
shuup_api/admin_module/: __init__.py  forms.py
shuup_api/admin_module/views/: permissions.py
shuup_api/locale/fi_FI/LC_MESSAGES/: django.po
shuup_api/locale/ru/LC_MESSAGES/: django.po
shuup_api/locale/zh_Hans/LC_MESSAGES/: django.po
shuup_api_test_app/: __init__.py  api.py  apps.py
shuup_api_tests/: settings.py  test_admin.py  test_auth.py  test_forms.py  test_permissions.py  urls.py
