[metadata]
name = shuup-api
version = 1.0.0.post+gitver
description = Shuup API
long_description = file: README.md
keywords = shuup api ecommerce

[options]
include_package_data = True
packages = find:
install_requires =
    shuup
    djangorestframework>=3.5,<3.6
    djangorestframework-jwt>=1.9,<2
    django_rest_swagger>=2.1.0,<2.2

[options.entry_points]
shuup.addon = shuup_api = shuup_api

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_api_tests.settings
django_find_project = false
norecursedirs = node_modules .git

[flake8]
exclude = dist,build,migrations,docs,shuup_api_tests
max-line-length = 120
max-complexity = 10

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup_api
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,shuup,shuup_*
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations,doc,build,shuup_api_tests,node_modules
not_skip=__init__.py
wrap_length=79
diff=True
